--- a/less/site/main.less
+++ b/less/site/main.less
@@ -24,6 +24,7 @@ header .nav-pills {
 }
 
 // CONTENT
+
 .full-width-banner {
   width: 100%;
   background-color: #00a3ff;
@@ -41,6 +42,10 @@ header .nav-pills {
     font-weight: 200;
     font-size: 1.9em;
   }
+}
+
+.top-image{
+  margin: 0 auto;
 }
 
 // FOOTER
